--- a/src/newtab/components/editable-grid/EditableTile.scss
+++ b/src/newtab/components/editable-grid/EditableTile.scss
@@ -1,10 +1,6 @@
 @import '~components/grid/Tile';
 @import '~styles/common-elements';
 
-.draggable-tile {
-  margin-bottom: 20px;
-}
-
 .remove-tile {
   @include button(30px, 30px, false);
   position: absolute;
