--- a/src/newtab/components/grid/Tile.scss
+++ b/src/newtab/components/grid/Tile.scss
@@ -16,6 +16,7 @@ $tile-height: 150px;
   position: relative;
   text-align: center;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .tile-overlay,
